  EntityDbRemoteServerAdmin added shutdown hook, server security policy updated accordingly
  Bugs fixed in EntityDbProvider classes
  AbstractRemoteServer.shuttingDown field added, used to prevent shutdown hook from repeating the shutdown sequence
  RemoteServer connectionKey is now a UUID
  connectionKey renamed to clientID throughout
  ServerMonitorPanel, moved connection timeout control to ClientUserMonitorPanel
  AbstractDatabase.require() moved to Util
  JasperReportsWrapper.toString() implemented, returns report name and parameters, if any
  EntityPanel.getPrintControls() removed
  Util.rejectNullValue() now returns the value if it isn't null
  Removed redundant Util.rejectNullValue() calls
  Entity and Entity.Key are now an interfaces
  EntityImpl and EntityImpl.KeyImpl added
  Entities factory class added
  DbConnection is now an interface
  DbConnectionImpl added
  DbConnectionPool renamed to ConnectionPoolImpl
  PoolableConnection added, DbConnection implements it, ConnectionPool uses it
  Column interface added to common.db
  Property is now an interface
  PropertyImpl added, package protected
  Properties factory class added
  Major refactoring of PropertySearchModel and co
  Finished the interfacing of client.model
  EntityDefinition is now an interface
  EntityDefinitionImpl added
  Entities.define() added
  Collections.size() == 0 replaced with isEmpty() throughout
  Finalized a bunch of classes and methods
  More of the same
0.5.8
  Distribution jars are now package-sealed by default
  ValueChangeMapEditModel.clearValues() removed, setValueMap(null) serves that purpose
  ValueChangeMapEditPanel.clearModelValues() added for clear action
  AbstractValueChangeMapEditModel, added default implementations for abstract methods, renamed to DefaultValueChangeMapEditModel
  ForeignKeySearchModel.initialize() removed
  AbstractInputProvider overgenerified?
  More finalization/inheritance work
  Coberture coverage added to build.xml
  ValueMapImplTest added